--- a/Runner Rabbit/Packages/manifest.json
+++ b/Runner Rabbit/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.google.external-dependency-manager": "1.2.164",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ads.ios-support": "1.0.0",
     "com.unity.analytics": "3.5.3",
     "com.unity.cinemachine": "2.5.0",
     "com.unity.collab-proxy": "1.3.9",
